# Just-Right

./: CMakeLists.txt
assets/: ideas.txt
src/: JustRight.cpp  JustRight.h  camera.c  camera.h  collision.c  collision.h  defs.h  enemy.c  enemy.h  entity.c  entity.h  fighting.c  fighting.h  ideas.txt  level.c  level.h  main.c  main.cpp  main.h  map.c  map.h  math.c  math.h  mouse.c  mouse.h  player.c  player.h  point.c  point.h  render.c  render.h  spawn.c  spawn.h  structs.h  test.c  test.h
